src/style/runner.less
/* ... */
.tree-scrubber--text {
  font-weight: 400;
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;

  .digit {
    font-weight: 700;
  }
}

.burn-in-label {
  color: #c0c0c0;
  text-align: center;
  font-weight: 500;

  &.overflow {
    margin-right: 0.25em;
  }
}

.burn-in-indicator {
  height: 1px;
  background-color: #c0c0c0;
  position: relative;
  margin-bottom: 10px;

  &::before { left: 0; }
  &::after { right: 0; }
  &::before,
  &::after {
    position: absolute;
    bottom: -5px;
    content: "";
    height: 5px;
    width: 1px;
    background-color: #c0c0c0;
  }
}

.burn-in-label,
.trees-label {
  display: inline-block;
}

.tree-scrubber--range-container {
  label,
  input {
    width: 0;
    height: 0;
    overflow: hidden;
    opacity: 0;
    position: absolute;
  }
}

.tree-scrubber--visualizer {
  position: relative;
}

.tree-scrubber--canvas {
  width: 100%;
  height: 25px;
  position: relative;
  cursor: pointer;
}

.mcc-indicator {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  // border-bottom: 5px solid #07C203;
  border-top: 5px solid #07C203;
  margin: 0 auto 5px auto;
  display: none;
}

.tree-scrubber--mcc-label {
  color: #07C203;
  font-weight: 700;
  position: relative;

  &.shifted {
    // transform: translate(-50%, 200%);
    transform: translate(-50%, -200%);
  }
}

.tree-scrubber--preview-label,
.tree-scrubber--mcc-label {
  position: absolute;
  // bottom: 2px;
  top: 2px;
  // transform: translate(-50%, 100%);
  transform: translate(-50%, -100%);
  // line-height: 1rem;
  line-height: 1rem;
  text-align: center;
  z-index: 10;
  font-size: 11px;
  text-transform: uppercase;
  background-color: rgba(255, 255, 255, 0.9);

  &:hover {
    z-index: 20;
  }
}

.tree-scrubber--preview-label,
.tree-scrubber--mcc-label .previewing {
  font-size: 9px;
  text-transform: uppercase;
  font-weight: 500;
}

.tree-scrubber--preview-label {
  &.burn-in {
    color: #c0c0c0;
  }
}

.tree-scrubber--mcc-label .previewing {
  font-weight: 700;
  display: inline;
}



.blocks {
  flex: 1;
  display: flex;
  flex-direction: column;

  > h1 {
    margin: 10px;
    color: #777;
  }

  .block + h1{
    margin-top: 30px;
  }

}

.block {
  flex: 1;
  display: flex;
  flex-direction: column;
  position: relative;
  & + .block {
    margin-top: @gBlock;
  }
  h2, h4 {
    color: @block-label;
    margin: unset;
  }
}

.block-header {
  display: flex;
  width: 100%;
  position: relative;
  margin: 0;
  margin-bottom: @gBlockLabel;
  h1 {
    padding-left: 10px;
    .legibleForms();
  }
}

.block-readout {
  .digit();
  position: absolute;
  bottom: 0;
  left: unset;
  right: 0;
  margin: 0;
  padding: 0 45px 0 0;
  text-align: right;
  color: @highlight;
}


.block--chart {
  flex: 1;
  display: flex;
  flex-direction: row;
  position: relative;
  max-height: 120px;
  .graphic {
    flex: 1;
    display: flex;
    flex-direction: column;
  }
  .chart {
    flex: 1;
    // background-color: @block-chart;
    // border: 1px solid @block-border;
    // width: 240px;
    height: 100%;
  }
  canvas.kneed {
    cursor: ew-resize;
    &.dragging  {
      cursor: col-resize;
    }
  }
}

.y-axis,
.x-axis {
  .t05();
  .digit();
  list-style: none;
  margin: unset;
  padding: unset;
  color: @axis-label;
  li {
    flex: 1;
    display: flex;
    flex-direction: column;
    &.max {
      flex: 0;
    }
  }
}

.y-axis {
  position: absolute;
  top: 0;
  bottom: unset;
  left: unset;
  right: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;
  width: @wYAxis;
  height: 100%;
  padding-bottom: 6px;
  li {
    min-height: 10px;
    position: relative;
    justify-content: flex-end;
    padding: 0 @unit;
    transform: translateY(-2px);
  }
}

.x-axis {
  display: none;
  // display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 240px;
  height: @hXAxis;
  li {
    position: relative;
    justify-content: flex-start;
    padding: @unit 0;
    &.step-last {
      text-align: right;
      flex: 0;
    }
  }

}



#burn-in-wrapper {
  p {display: none;}
  height: 1.5em;
  &.unset {
    p {
      display: block;
      margin: 0;
    }
    input, label {display: none;}
    &.pre {opacity: 0.3;}
  }

  label .hint {color: #aaa}
}

